--- a/Day_029_HW.ipynb
+++ b/Day_029_HW.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "data_path = 'data/'\n",
+    "data_path = 'data/Day_029/'\n",
     "df = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "\n",
     "train_Y = df['Survived']\n",
@@ -184,23 +184,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Embarked\n",
+       "C    168\n",
+       "Q     77\n",
+       "S    644\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 取一個類別型欄位, 與一個數值型欄位, 做群聚編碼\n",
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\""
+    "df.groupby(['Embarked']).size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Embarked', 'Fare'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Fare_Embarked_Mean</th>\n",
+       "      <th>Fare_Embarked_Mode</th>\n",
+       "      <th>Fare_Embarked_Median</th>\n",
+       "      <th>Fare_Embarked_Max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C</td>\n",
+       "      <td>59.954144</td>\n",
+       "      <td>7.2292</td>\n",
+       "      <td>29.70</td>\n",
+       "      <td>512.3292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q</td>\n",
+       "      <td>13.276030</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>90.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>S</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Embarked  Fare_Embarked_Mean  Fare_Embarked_Mode  Fare_Embarked_Median  \\\n",
+       "0        C           59.954144              7.2292                 29.70   \n",
+       "1        Q           13.276030              7.7500                  7.75   \n",
+       "2        S           27.079812              8.0500                 13.00   \n",
+       "\n",
+       "   Fare_Embarked_Max  \n",
+       "0           512.3292  \n",
+       "1            90.0000  \n",
+       "2           263.0000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 取一個類別型欄位, 與一個數值型欄位, 做群聚編碼\n",
+    "\"\"\"\n",
+    "Your Code Here\n",
+    "\"\"\"\n",
+    "# 寫法類似均值編碼, 只是對另一個特徵, 而非目標值\n",
+    "mean_df = df.groupby(['Embarked'])['Fare'].mean().reset_index()\n",
+    "print(mean_df.columns)\n",
+    "mode_df = df.groupby(['Embarked'])['Fare'].apply(lambda x: x.mode()[0]).reset_index()\n",
+    "median_df = df.groupby(['Embarked'])['Fare'].median().reset_index()\n",
+    "max_df = df.groupby(['Embarked'])['Fare'].max().reset_index()\n",
+    "temp = pd.merge(mean_df, mode_df, how='left', on=['Embarked'])\n",
+    "temp = pd.merge(temp, median_df, how='left', on=['Embarked'])\n",
+    "temp = pd.merge(temp, max_df, how='left', on=['Embarked'])\n",
+    "temp.columns = ['Embarked', 'Fare_Embarked_Mean', 'Fare_Embarked_Mode', 'Fare_Embarked_Median', 'Fare_Embarked_Max']\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Fare_Embarked_Mean</th>\n",
+       "      <th>Fare_Embarked_Mode</th>\n",
+       "      <th>Fare_Embarked_Median</th>\n",
+       "      <th>Fare_Embarked_Max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>59.954144</td>\n",
+       "      <td>7.2292</td>\n",
+       "      <td>29.7</td>\n",
+       "      <td>512.3292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pclass                                               Name     Sex   Age  \\\n",
+       "0       3                            Braund, Mr. Owen Harris    male  22.0   \n",
+       "1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0   \n",
+       "2       3                             Heikkinen, Miss. Laina  female  26.0   \n",
+       "3       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
+       "4       3                           Allen, Mr. William Henry    male  35.0   \n",
+       "\n",
+       "   SibSp  Parch            Ticket     Fare Cabin  Fare_Embarked_Mean  \\\n",
+       "0      1      0         A/5 21171   7.2500   NaN           27.079812   \n",
+       "1      1      0          PC 17599  71.2833   C85           59.954144   \n",
+       "2      0      0  STON/O2. 3101282   7.9250   NaN           27.079812   \n",
+       "3      1      0            113803  53.1000  C123           27.079812   \n",
+       "4      0      0            373450   8.0500   NaN           27.079812   \n",
+       "\n",
+       "   Fare_Embarked_Mode  Fare_Embarked_Median  Fare_Embarked_Max  \n",
+       "0              8.0500                  13.0           263.0000  \n",
+       "1              7.2292                  29.7           512.3292  \n",
+       "2              8.0500                  13.0           263.0000  \n",
+       "3              8.0500                  13.0           263.0000  \n",
+       "4              8.0500                  13.0           263.0000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.merge(df, temp, how='left', on=['Embarked'])\n",
+    "df = df.drop(['Embarked'] , axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 Numeric Features : ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Fare_Embarked_Mean', 'Fare_Embarked_Mode', 'Fare_Embarked_Median', 'Fare_Embarked_Max']\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Fare_Embarked_Mean</th>\n",
+       "      <th>Fare_Embarked_Mode</th>\n",
+       "      <th>Fare_Embarked_Median</th>\n",
+       "      <th>Fare_Embarked_Max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>59.954144</td>\n",
+       "      <td>7.2292</td>\n",
+       "      <td>29.7</td>\n",
+       "      <td>512.3292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>27.079812</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>263.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pclass   Age  SibSp  Parch     Fare  Fare_Embarked_Mean  \\\n",
+       "0       3  22.0      1      0   7.2500           27.079812   \n",
+       "1       1  38.0      1      0  71.2833           59.954144   \n",
+       "2       3  26.0      0      0   7.9250           27.079812   \n",
+       "3       1  35.0      1      0  53.1000           27.079812   \n",
+       "4       3  35.0      0      0   8.0500           27.079812   \n",
+       "\n",
+       "   Fare_Embarked_Mode  Fare_Embarked_Median  Fare_Embarked_Max  \n",
+       "0              8.0500                  13.0           263.0000  \n",
+       "1              7.2292                  29.7           512.3292  \n",
+       "2              8.0500                  13.0           263.0000  \n",
+       "3              8.0500                  13.0           263.0000  \n",
+       "4              8.0500                  13.0           263.0000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#只取 int64, float64 兩種數值型欄位, 存於 num_features 中\n",
     "num_features = []\n",
@@ -221,35 +621,62 @@
    "metadata": {},
    "source": [
     "# 作業2\n",
-    "* 將上述的新特徵，合併原有的欄位做生存率預估，結果是否有改善?"
+    "* 將上述的新特徵，合併原有的欄位做生存率預估，結果是否有改善?\n",
+    "> With the use of new features, the score improves slightly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.70041428661101"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 原始特徵 + 邏輯斯迴歸\n",
     "\"\"\"\n",
     "Your Code Here\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# 沒有這四個新特徵的 dataframe 稱為 df_minus\n",
+    "df_minus = df.drop(['Fare_Embarked_Mean', 'Fare_Embarked_Mode', 'Fare_Embarked_Median', 'Fare_Embarked_Max'] , axis=1)\n",
+    "# 原始特徵 + 線性迴歸\n",
+    "train_X = MMEncoder.fit_transform(df_minus)\n",
+    "estimator = LogisticRegression()\n",
+    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7026740317619735"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 新特徵 + 邏輯斯迴歸\n",
     "\"\"\"\n",
     "Your Code Here\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "train_X = MMEncoder.fit_transform(df)\n",
+    "cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
    ]
   },
   {
@@ -264,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
