--- a/Day_033_HW.ipynb
+++ b/Day_033_HW.ipynb
@@ -26,14 +26,8 @@
    "metadata": {},
    "source": [
     "### 1. 模型的泛化能力 (generalization) 是指什麼？ \n",
-    "### 2. 分類問題與回歸問題分別可用的目標函數有哪些？"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. 模型的泛化能力 (generalization) 是指什麼？ \n"
+    "> 經過訓練資料評選出來的model，對未知(新的)的預測能力。\n",
+    "\n"
    ]
   },
   {
