--- a/Day_025_Mean_Encoder_Ans.ipynb
+++ b/Day_025_Mean_Encoder_Ans.ipynb
@@ -29,9 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業1\n",
     "* 請仿照範例，將鐵達尼範例中的類別型特徵改用均值編碼實作一次"
@@ -176,7 +174,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = 'data/Day_025/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -317,12 +315,15 @@
    },
    "source": [
     "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
+    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?\n",
+    "> 均值編碼比較好，但這主要是因為'Name'與'Ticket'兩個欄位的種類數眾多  \n",
+    "如果均值編碼時加入這裡個欄位的均值會過擬合( overfitting )  \n",
+    "因此下列程式碼中，需要先移除這兩個欄位，再做均值編碼"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -330,8 +331,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.7800138095537004\n",
-      "time : 0.17322278022766113 sec\n"
+      "score : 0.780004837244799\n",
+      "time : 0.03291201591491699 sec\n"
      ]
     }
    ],
@@ -350,15 +351,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name        891\n",
+       "Sex           2\n",
+       "Ticket      681\n",
+       "Cabin       148\n",
+       "Embarked      4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 如果欄位類別數太多, 需要先剔除, 否則會 overfit (正確率會到達 1.0)\n",
+    "train_X.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score : 1.0\n",
-      "time : 0.05337381362915039 sec\n"
+      "shape : (891, 5)\n",
+      "score : 0.8350366889413987\n",
+      "time : 0.013962030410766602 sec\n"
      ]
     }
    ],
@@ -370,51 +398,27 @@
     "    mean_df.columns = [c, f'{c}_mean']\n",
     "    data = pd.merge(data, mean_df, on=c, how='left')\n",
     "    data = data.drop([c] , axis=1)\n",
-    "data = data.drop(['Survived'] , axis=1)\n",
+    "data = data.drop(['Survived', 'Name_mean', 'Ticket_mean'] , axis=1)\n",
     "estimator = LogisticRegression()\n",
     "start = time.time()\n",
-    "#print(f'shape : {train_X.shape}')\n",
+    "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
     "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape : (891, 5)\n",
-      "score : 0.9752934530161321\n",
-      "time : 0.06444692611694336 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "# the code below are copied from 符前智 (https://github.com/FuChienChih/ML100Days/blob/main/homework/Day_025_HW.ipynb)\n",
-    "# score = 1.0 是因為機器以 Name 作為參考依據，但名字其實不適合當遇刺的特徵。 試著把 Name 這個特徵刪除\n",
-    "data = data.drop('Name_mean' , axis=1)\n",
-    "start = time.time()\n",
-    "print(f'shape : {train_X.shape}')\n",
-    "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
