--- a/Day_030_HW.ipynb
+++ b/Day_030_HW.ipynb
@@ -506,21 +506,21 @@
    "source": [
     "# 作業2\n",
     "* 續上題，使用 L1 Embedding 做特徵選擇(自訂門檻)，觀察預測能力是否提升?\n",
-    "> the socre with the use of L1 embedding is the same as "
+    "> the socre with the use of L1 embedding is the same as native features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.39684291, -0.25338753, -0.19144856,  0.28161304,  0.28188094])"
+       "array([-0.39126312, -0.1355752 , -0.        ,  0.03068895,  0.        ])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
     "\"\"\"\n",
     "Your Code Here, select parameter alpha \n",
     "\"\"\"\n",
-    "L1_Reg = Lasso(alpha=0.001)\n",
+    "L1_Reg = Lasso(alpha=0.005)\n",
     "\n",
     "train_X = MMEncoder.fit_transform(df)\n",
     "L1_Reg.fit(train_X, train_Y)\n",
@@ -539,16 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']"
+       "['Pclass', 'Age', 'Parch']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70041428661101"
+       "0.6992906911053921"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
