--- a/Day_022_Introduction_of_Feature Engineering_Ans.ipynb
+++ b/Day_022_Introduction_of_Feature Engineering_Ans.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# 作業 : (Kaggle)鐵達尼生存預測\n",
+    "# 作業 : (Kaggle)鐵達尼生存預測精簡版 \n",
     "https://www.kaggle.com/c/titanic"
    ]
   },
@@ -15,7 +13,7 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察均值編碼的效果"
+    "- 試著不依賴說明, 只依照下列程式碼回答下列問題, 初步理解什麼是\"特徵工程\"的區塊"
    ]
   },
   {
@@ -23,23 +21,61 @@
    "metadata": {},
    "source": [
     "# [作業重點]\n",
-    "- 仿造範例, 完成標籤編碼與均值編碼搭配邏輯斯迴歸的預測\n",
-    "- 觀察標籤編碼與均值編碼在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
+    "- 試著不依賴註解, 以之前所學, 回答下列問題"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業1\n",
-    "* 請仿照範例，將鐵達尼範例中的類別型特徵改用均值編碼實作一次"
+    "* 下列A~E五個程式區塊中，哪一塊是特徵工程?\n",
+    "> 程式區塊 C\n",
+    "\n",
+    "# 作業2\n",
+    "* 對照程式區塊 B 與 C 的結果，請問那些欄位屬於\"類別型欄位\"? (回答欄位英文名稱即可) \n",
+    "> Name, Sex, Ticket, Cabin, Embarked 等五個欄位  \n",
+    ">  \n",
+    "> 註 : 像是 Pclass 這樣的欄位, 雖然就意義上而言是類別型欄位, 但因為裡面都是數值,  \n",
+    "> 因此 Python 讀取時會先將其判定為數值欄位, 希望同學了解語言判定與人為理解上的落差,  \n",
+    "> 因為 Python 不須宣告物件型別, 都是自動判定, 這點雖然方便, 卻也是初學者常常遇到的困難所在\n",
+    "\n",
+    "# 作業3\n",
+    "* 續上題，請問哪個欄位是\"目標值\"?\n",
+    "> Survived 是目標值"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 12)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 程式區塊 A\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "\n",
+    "data_path = 'data/'\n",
+    "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
+    "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,25 +197,13 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 做完特徵工程前的所有準備 (與前範例相同)\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import copy, time\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "data_path = 'data/Day_025/'\n",
-    "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
-    "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
-    "\n",
+    "# 程式區塊 B\n",
     "train_Y = df_train['Survived']\n",
     "ids = df_test['PassengerId']\n",
     "df_train = df_train.drop(['PassengerId', 'Survived'] , axis=1)\n",
@@ -190,15 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5 Numeric Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n",
-      "\n"
+      "C:\\Python\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
      ]
     },
     {
@@ -222,9 +246,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Pclass</th>\n",
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
        "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "    </tr>\n",
@@ -232,182 +261,144 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.118683</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.283951</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.775862</td>\n",
+       "      <td>0.016072</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.218989</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.481481</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.879310</td>\n",
+       "      <td>0.140813</td>\n",
+       "      <td>0.575269</td>\n",
+       "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.400459</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.984914</td>\n",
+       "      <td>0.017387</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.323124</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.070043</td>\n",
+       "      <td>0.105390</td>\n",
+       "      <td>0.381720</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.016845</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.699353</td>\n",
+       "      <td>0.017630</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                Name     Sex  \\\n",
-       "0                            Braund, Mr. Owen Harris    male   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
-       "2                             Heikkinen, Miss. Laina  female   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
-       "4                           Allen, Mr. William Henry    male   \n",
+       "   Pclass      Name  Sex       Age  SibSp  Parch    Ticket      Fare  \\\n",
+       "0     1.0  0.118683  1.0  0.283951  0.125    0.0  0.775862  0.016072   \n",
+       "1     0.0  0.218989  0.0  0.481481  0.125    0.0  0.879310  0.140813   \n",
+       "2     1.0  0.400459  0.0  0.333333  0.000    0.0  0.984914  0.017387   \n",
+       "3     0.0  0.323124  0.0  0.444444  0.125    0.0  0.070043  0.105390   \n",
+       "4     1.0  0.016845  1.0  0.444444  0.000    0.0  0.699353  0.017630   \n",
        "\n",
-       "             Ticket Cabin Embarked  \n",
-       "0         A/5 21171  None        S  \n",
-       "1          PC 17599   C85        C  \n",
-       "2  STON/O2. 3101282  None        S  \n",
-       "3            113803  C123        S  \n",
-       "4            373450  None        S  "
+       "      Cabin  Embarked  \n",
+       "0  0.000000  1.000000  \n",
+       "1  0.575269  0.333333  \n",
+       "2  0.000000  1.000000  \n",
+       "3  0.381720  1.000000  \n",
+       "4  0.000000  1.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#只取類別值 (object) 型欄位, 存於 object_features 中\n",
-    "object_features = []\n",
-    "for dtype, feature in zip(df.dtypes, df.columns):\n",
-    "    if dtype == 'object':\n",
-    "        object_features.append(feature)\n",
-    "print(f'{len(object_features)} Numeric Features : {object_features}\\n')\n",
-    "\n",
-    "# 只留類別型欄位\n",
-    "df = df[object_features]\n",
-    "df = df.fillna('None')\n",
-    "train_num = train_Y.shape[0]\n",
+    "# 程式區塊 C\n",
+    "LEncoder = LabelEncoder()\n",
+    "MMEncoder = MinMaxScaler()\n",
+    "for c in df.columns:\n",
+    "    df[c] = df[c].fillna(-1)\n",
+    "    if df[c].dtype == 'object':\n",
+    "        df[c] = LEncoder.fit_transform(list(df[c].values))\n",
+    "    df[c] = MMEncoder.fit_transform(df[c].values.reshape(-1, 1))\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
-    "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape : (891, 5)\n",
-      "score : 0.7800138095537004\n",
-      "time : 0.17322278022766113 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
-    "df_temp = pd.DataFrame()\n",
-    "for c in df.columns:\n",
-    "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "train_X = df_temp[:train_num]\n",
+    "# 程式區塊 D\n",
+    "train_num = train_Y.shape[0]\n",
+    "train_X = df[:train_num]\n",
+    "test_X = df[train_num:]\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "estimator = LogisticRegression()\n",
-    "start = time.time()\n",
-    "print(f'shape : {train_X.shape}')\n",
-    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')"
+    "estimator.fit(train_X, train_Y)\n",
+    "pred = estimator.predict(test_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "score : 1.0\n",
-      "time : 0.05337381362915039 sec\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# 均值編碼 + 邏輯斯迴歸\n",
-    "data = pd.concat([df[:train_num], train_Y], axis=1)\n",
-    "for c in df.columns:\n",
-    "    mean_df = data.groupby([c])['Survived'].mean().reset_index()\n",
-    "    mean_df.columns = [c, f'{c}_mean']\n",
-    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
-    "    data = data.drop([c] , axis=1)\n",
-    "data = data.drop(['Survived'] , axis=1)\n",
-    "estimator = LogisticRegression()\n",
-    "start = time.time()\n",
-    "#print(f'shape : {train_X.shape}')\n",
-    "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape : (891, 5)\n",
-      "score : 0.9752934530161321\n",
-      "time : 0.06444692611694336 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "# the code below are copied from 符前智 (https://github.com/FuChienChih/ML100Days/blob/main/homework/Day_025_HW.ipynb)\n",
-    "# score = 1.0 是因為機器以 Name 作為參考依據，但名字其實不適合當遇刺的特徵。 試著把 Name 這個特徵刪除\n",
-    "data = data.drop('Name_mean' , axis=1)\n",
-    "start = time.time()\n",
-    "print(f'shape : {train_X.shape}')\n",
-    "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')\n",
-    "\n"
+    "# 程式區塊 E\n",
+    "sub = pd.DataFrame({'PassengerId': ids, 'Survived': pred})\n",
+    "sub.to_csv('titanic_baseline.csv', index=False) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
