--- a/Day_026_CountEncoder_and_FeatureHash_Ans.ipynb
+++ b/Day_026_CountEncoder_and_FeatureHash_Ans.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業 : (Kaggle)鐵達尼生存預測\n",
     "https://www.kaggle.com/c/titanic"
@@ -30,18 +28,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業1\n",
-    "* 參考範例，將鐵達尼的艙位代碼( 'Cabin' )欄位使用特徵雜湊 / 標籤編碼 / 計數編碼三種轉換後，  \n",
+    "* 參考範例，將鐵達尼的艙位代碼( 'Cabin' )欄位使用特徵雜湊 / 標籤編碼 / 目標均值編碼三種轉換後，  \n",
     "與其他類別型欄位一起預估生存機率"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +159,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,12 +168,12 @@
     "# 做完特徵工程前的所有準備 (與前範例相同)\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import copy, time\n",
+    "import copy\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "data_path = 'data/Day_026/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +287,7 @@
        "4            373450  None        S  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,24 +309,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 作業2\n",
-    "* 承上題，三者比較效果何者最好?"
+    "* 承上題，三者比較效果何者最好?\n",
+    "> 估計效果 : 計數編碼 > 計數編碼 + 特徵雜湊 > 特徵雜湊 > 標籤編碼  \n",
+    "所以可以看出, 計數編碼是相對比較有效的特徵  \n",
+    "特徵雜湊依照不同的Hash空間, 效果未必理想, 只是資訊比較密集, 計算上較快  \n",
+    "混合使用也未必比只有計數編碼的效果好"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7800138095537004\n"
+      "0.780004837244799\n"
      ]
     },
     {
@@ -415,7 +413,7 @@
        "4    22    1     649    185         3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,9 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Python\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: FutureWarning: using a dict on a Series for aggregation\n",
+      "is deprecated and will be removed in a future version\n",
+      "  \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -530,19 +537,15 @@
        "183               F4            4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 加上 'Cabin' 欄位的計數編碼\n",
-    "# 第一行 : df.groupby(['Cabin']) 會輸出 df 以 'Cabin' 群聚後的結果, 但因為群聚一類只會有一個值, 因此必須要定義運算\n",
-    "# 例如 df.groupby(['Cabin']).count(), 但欄位名稱會改變, 需要用語法 rename 重新命名欄位\n",
     "count_df = df.groupby(['Cabin']).count()['Name'].reset_index()\n",
     "count_df = count_df.rename(columns={'Name': 'Cabin_Count'})\n",
-    "# 但是上面資料表結果只是 'Cabin' 名稱對應的次數, 要做計數編碼還需要第二行 : 將上表結果與原表格 merge, 合併於 'Ticket' 欄位\n",
-    "# 使用 how='left' 是完全保留原資料表的所有 index 與順序\n",
     "df = pd.merge(df, count_df, on=['Cabin'], how='left')\n",
     "count_df.sort_values(by=['Cabin_Count'], ascending=False).head(10)"
    ]
@@ -553,174 +556,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "      <th>Cabin_Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Moran, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>330877</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Q</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>McCarthy, Mr. Timothy J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>17463</td>\n",
-       "      <td>E46</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Palsson, Master. Gosta Leonard</td>\n",
-       "      <td>male</td>\n",
-       "      <td>349909</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>347742</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>237736</td>\n",
-       "      <td>None</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                Name     Sex  \\\n",
-       "0                            Braund, Mr. Owen Harris    male   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
-       "2                             Heikkinen, Miss. Laina  female   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
-       "4                           Allen, Mr. William Henry    male   \n",
-       "5                                   Moran, Mr. James    male   \n",
-       "6                            McCarthy, Mr. Timothy J    male   \n",
-       "7                     Palsson, Master. Gosta Leonard    male   \n",
-       "8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female   \n",
-       "9                Nasser, Mrs. Nicholas (Adele Achem)  female   \n",
-       "\n",
-       "             Ticket Cabin Embarked  Cabin_Count  \n",
-       "0         A/5 21171  None        S         1014  \n",
-       "1          PC 17599   C85        C            2  \n",
-       "2  STON/O2. 3101282  None        S         1014  \n",
-       "3            113803  C123        S            2  \n",
-       "4            373450  None        S         1014  \n",
-       "5            330877  None        Q         1014  \n",
-       "6             17463   E46        S            2  \n",
-       "7            349909  None        S         1014  \n",
-       "8            347742  None        S         1014  \n",
-       "9            237736  None        C         1014  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7822547234950725\n"
+      "0.7856230275549181\n"
      ]
     },
     {
@@ -811,33 +650,33 @@
        "4    22    1     649    185         3         1014"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 'Cabin'計數編碼 + 邏輯斯迴歸\n",
+    "# 計數編碼 + 邏輯斯迴歸\n",
     "df_temp = pd.DataFrame()\n",
     "for c in object_features:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
     "df_temp['Cabin_Count'] = df['Cabin_Count']\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression(max_iter=1000)\n",
+    "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7755194275312285\n"
+      "0.7867780793371981\n"
      ]
     },
     {
@@ -877,7 +716,7 @@
        "      <td>720</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -886,7 +725,7 @@
        "      <td>816</td>\n",
        "      <td>106</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -895,7 +734,7 @@
        "      <td>914</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -904,7 +743,7 @@
        "      <td>65</td>\n",
        "      <td>70</td>\n",
        "      <td>3</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -913,7 +752,7 @@
        "      <td>649</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -921,42 +760,40 @@
       ],
       "text/plain": [
        "   Name  Sex  Ticket  Cabin  Embarked  Cabin_Hash\n",
-       "0   155    1     720    185         3           9\n",
-       "1   286    0     816    106         0           9\n",
-       "2   523    0     914    185         3           9\n",
-       "3   422    0      65     70         3           7\n",
-       "4    22    1     649    185         3           9"
+       "0   155    1     720    185         3           1\n",
+       "1   286    0     816    106         0           0\n",
+       "2   523    0     914    185         3           1\n",
+       "3   422    0      65     70         3           1\n",
+       "4    22    1     649    185         3           1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 'Cabin'特徵雜湊 + 邏輯斯迴歸\n",
+    "# 特徵雜湊 + 邏輯斯迴歸\n",
     "df_temp = pd.DataFrame()\n",
     "for c in object_features:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "# 這邊的雜湊編碼, 是直接將 'Ticket' 的名稱放入雜湊函數的輸出數值, 為了要確定是緊密(dense)特徵, 因此除以10後看餘數\n",
-    "# 這邊的 10 是隨機選擇, 不一定要用 10, 同學可以自由選擇購小的數字試看看. 基本上效果都不會太好\n",
-    "df_temp['Cabin_Hash'] = df['Cabin'].map(lambda x:hash(x) % 10)\n",
+    "df_temp['Cabin_Hash'] = df['Cabin'].map(lambda x:hash(x) % 5)\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression(max_iter=1000)\n",
+    "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7788776599083548\n"
+      "0.7856480649070302\n"
      ]
     },
     {
@@ -997,7 +834,7 @@
        "      <td>720</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1007,7 +844,7 @@
        "      <td>816</td>\n",
        "      <td>106</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1017,7 +854,7 @@
        "      <td>914</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1027,7 +864,7 @@
        "      <td>65</td>\n",
        "      <td>70</td>\n",
        "      <td>3</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1037,7 +874,7 @@
        "      <td>649</td>\n",
        "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1046,27 +883,27 @@
       ],
       "text/plain": [
        "   Name  Sex  Ticket  Cabin  Embarked  Cabin_Hash  Cabin_Count\n",
-       "0   155    1     720    185         3           9         1014\n",
-       "1   286    0     816    106         0           9            2\n",
-       "2   523    0     914    185         3           9         1014\n",
-       "3   422    0      65     70         3           7            2\n",
-       "4    22    1     649    185         3           9         1014"
+       "0   155    1     720    185         3           1         1014\n",
+       "1   286    0     816    106         0           0            2\n",
+       "2   523    0     914    185         3           1         1014\n",
+       "3   422    0      65     70         3           1            2\n",
+       "4    22    1     649    185         3           1         1014"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 'Cabin'計數編碼 + 'Cabin'特徵雜湊 + 邏輯斯迴歸\n",
+    "# 計數編碼 + 特徵雜湊 + 邏輯斯迴歸\n",
     "df_temp = pd.DataFrame()\n",
     "for c in object_features:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
-    "df_temp['Cabin_Hash'] = df['Cabin'].map(lambda x:hash(x) % 10)\n",
+    "df_temp['Cabin_Hash'] = df['Cabin'].map(lambda x:hash(x) % 5)\n",
     "df_temp['Cabin_Count'] = df['Cabin_Count']\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression(max_iter=1000)\n",
+    "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
