--- a/Day_028_Feature_Combination.ipynb
+++ b/Day_028_Feature_Combination.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [作業目標]\n",
+    "# [教學目標]\n",
     "- 使用並觀察特徵組合, 在計程車費率預測競賽的影響"
    ]
   },
@@ -22,14 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [作業重點]\n",
-    "- 仿造範例並參考今日課程內容, 使用經緯度一圈的長度比的概念造出新特徵, 觀察有什麼影響 (In[6], Out[6])\n",
-    "- 只使用上面所造的這個新特徵, 觀察有什麼影響 (In[7], Out[7])"
+    "# [範例重點]\n",
+    "- 增加精度差與緯度差兩個特徵, 觀察線性迴歸與梯度提升樹的預測結果有什麼影響 (In[4], Out[4], In[5], Out[5]) \n",
+    "- 再增加座標距離特徵, 觀察線性迴歸與梯度提升樹的預測結果有什麼影響 (In[6], Out[6], In[7], Out[7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4         -73.982490         40.761887                3  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4            3             25             56  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475638442\n",
-      "Gradient Boosting Reg Score : 0.7104206713269223\n"
+      "Gradient Boosting Reg Score : 0.7119118588654173\n"
      ]
     }
    ],
@@ -337,7 +337,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude_diff</th>\n",
+       "      <th>latitude_diff</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.009452</td>\n",
+       "      <td>-0.002437</td>\n",
+       "      <td>-73.990580</td>\n",
+       "      <td>40.761071</td>\n",
+       "      <td>-73.981128</td>\n",
+       "      <td>40.758634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.001244</td>\n",
+       "      <td>0.018265</td>\n",
+       "      <td>-73.988403</td>\n",
+       "      <td>40.723431</td>\n",
+       "      <td>-73.989647</td>\n",
+       "      <td>40.741695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.003756</td>\n",
+       "      <td>-0.007222</td>\n",
+       "      <td>-74.015785</td>\n",
+       "      <td>40.715110</td>\n",
+       "      <td>-74.012029</td>\n",
+       "      <td>40.707888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.019292</td>\n",
+       "      <td>-0.008437</td>\n",
+       "      <td>-73.977322</td>\n",
+       "      <td>40.787275</td>\n",
+       "      <td>-73.958030</td>\n",
+       "      <td>40.778838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.007193</td>\n",
+       "      <td>0.032170</td>\n",
+       "      <td>-73.989683</td>\n",
+       "      <td>40.729717</td>\n",
+       "      <td>-73.982490</td>\n",
+       "      <td>40.761887</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude_diff  latitude_diff  pickup_longitude  pickup_latitude  \\\n",
+       "0        0.009452      -0.002437        -73.990580        40.761071   \n",
+       "1       -0.001244       0.018265        -73.988403        40.723431   \n",
+       "2        0.003756      -0.007222        -74.015785        40.715110   \n",
+       "3        0.019292      -0.008437        -73.977322        40.787275   \n",
+       "4        0.007193       0.032170        -73.989683        40.729717   \n",
+       "\n",
+       "   dropoff_longitude  dropoff_latitude  \n",
+       "0         -73.981128         40.758634  \n",
+       "1         -73.989647         40.741695  \n",
+       "2         -74.012029         40.707888  \n",
+       "3         -73.958030         40.778838  \n",
+       "4         -73.982490         40.761887  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 增加緯度差, 經度差兩個特徵\n",
+    "df['longitude_diff'] = df['dropoff_longitude'] - df['pickup_longitude']\n",
+    "df['latitude_diff'] = df['dropoff_latitude'] - df['pickup_latitude']\n",
+    "df[['longitude_diff', 'latitude_diff', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Reg Score : 0.026828340288215725\n",
+      "Gradient Boosting Reg Score : 0.7969662328666821\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 結果 : 光是用經緯度差, 準確度就有巨幅上升\n",
+    "train_X = scaler.fit_transform(df)\n",
+    "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,10 +497,6 @@
        "      <th>distance_2D</th>\n",
        "      <th>longitude_diff</th>\n",
        "      <th>latitude_diff</th>\n",
-       "      <th>pickup_longitude</th>\n",
-       "      <th>pickup_latitude</th>\n",
-       "      <th>dropoff_longitude</th>\n",
-       "      <th>dropoff_latitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -376,87 +505,58 @@
        "      <td>0.009761</td>\n",
        "      <td>0.009452</td>\n",
        "      <td>-0.002437</td>\n",
-       "      <td>-73.990580</td>\n",
-       "      <td>40.761071</td>\n",
-       "      <td>-73.981128</td>\n",
-       "      <td>40.758634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.018307</td>\n",
        "      <td>-0.001244</td>\n",
        "      <td>0.018265</td>\n",
-       "      <td>-73.988403</td>\n",
-       "      <td>40.723431</td>\n",
-       "      <td>-73.989647</td>\n",
-       "      <td>40.741695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.008140</td>\n",
        "      <td>0.003756</td>\n",
        "      <td>-0.007222</td>\n",
-       "      <td>-74.015785</td>\n",
-       "      <td>40.715110</td>\n",
-       "      <td>-74.012029</td>\n",
-       "      <td>40.707888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.021056</td>\n",
        "      <td>0.019292</td>\n",
        "      <td>-0.008437</td>\n",
-       "      <td>-73.977322</td>\n",
-       "      <td>40.787275</td>\n",
-       "      <td>-73.958030</td>\n",
-       "      <td>40.778838</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.032964</td>\n",
        "      <td>0.007193</td>\n",
        "      <td>0.032170</td>\n",
-       "      <td>-73.989683</td>\n",
-       "      <td>40.729717</td>\n",
-       "      <td>-73.982490</td>\n",
-       "      <td>40.761887</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   distance_2D  longitude_diff  latitude_diff  pickup_longitude  \\\n",
-       "0     0.009761        0.009452      -0.002437        -73.990580   \n",
-       "1     0.018307       -0.001244       0.018265        -73.988403   \n",
-       "2     0.008140        0.003756      -0.007222        -74.015785   \n",
-       "3     0.021056        0.019292      -0.008437        -73.977322   \n",
-       "4     0.032964        0.007193       0.032170        -73.989683   \n",
-       "\n",
-       "   pickup_latitude  dropoff_longitude  dropoff_latitude  \n",
-       "0        40.761071         -73.981128         40.758634  \n",
-       "1        40.723431         -73.989647         40.741695  \n",
-       "2        40.715110         -74.012029         40.707888  \n",
-       "3        40.787275         -73.958030         40.778838  \n",
-       "4        40.729717         -73.982490         40.761887  "
+       "   distance_2D  longitude_diff  latitude_diff\n",
+       "0     0.009761        0.009452      -0.002437\n",
+       "1     0.018307       -0.001244       0.018265\n",
+       "2     0.008140        0.003756      -0.007222\n",
+       "3     0.021056        0.019292      -0.008437\n",
+       "4     0.032964        0.007193       0.032170"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 增加緯度差, 經度差, 座標距離等三個特徵\n",
-    "df['longitude_diff'] = df['dropoff_longitude'] - df['pickup_longitude']\n",
-    "df['latitude_diff'] = df['dropoff_latitude'] - df['pickup_latitude']\n",
+    "# 增加座標距離特徵\n",
     "df['distance_2D'] = (df['longitude_diff']**2 + df['latitude_diff']**2)**0.5\n",
-    "df[['distance_2D', 'longitude_diff', 'latitude_diff', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude']].head()"
+    "df[['distance_2D', 'longitude_diff', 'latitude_diff']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,12 +564,12 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.027349059353071213\n",
-      "Gradient Boosting Reg Score : 0.8057254695051805\n"
+      "Gradient Boosting Reg Score : 0.8041331437322377\n"
      ]
     }
    ],
    "source": [
-    "# 結果 : 準確度上升\n",
+    "# 結果 : 加上座標距離後, 準確度再度上升(包含線性迴歸)\n",
     "train_X = scaler.fit_transform(df)\n",
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
@@ -483,64 +583,9 @@
    "source": [
     "# 作業1\n",
     "* 參考今日教材，試著使用經緯度一圈的長度比這一概念，組合出一個新特徵，再觀察原特徵加上新特徵是否提升了正確率?\n",
-    "> there is no significant difference\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Reg Score : 0.025411719781064424\n",
-      "Gradient Boosting Reg Score : 0.804789905855529\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "\"\"\"\n",
-    "Your Code Here, set new character at df['distance_real']\n",
-    "\"\"\"\n",
-    "# the cod below is copied from https://github.com/gushengzhao1996/ML_100-Days/blob/main/Day_028_HW.ipynb\n",
-    "df['longitude_diff'] = df['longitude_diff']*math.cos((40.75/180)*math.pi) #根據角度修正經度\n",
-    "df['distance_real'] = (df['longitude_diff']**2 + df['latitude_diff']**2)**0.5\n",
-    "# 觀察結果 \n",
-    "train_X = scaler.fit_transform(df)\n",
-    "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
-    "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "# 作業2\n",
-    "* 試著只使用新特徵估計目標值(忽略原特徵)，效果跟作業1的結果比較起來效果如何?\n",
-    "> Both scores slump vividly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Reg Score : 0.001446755998683602\n",
-      "Gradient Boosting Reg Score : 0.7221194640622727\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_X = scaler.fit_transform(df[['distance_real']])\n",
-    "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
-    "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
+    "* 試著只使用新特徵估計目標值(忽略原特徵)，效果跟作業1的結果比較起來效果如何?"
    ]
   },
   {
