--- a/Day_028_Feature_Combination_Ans.ipynb
+++ b/Day_028_Feature_Combination_Ans.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4         -73.982490         40.761887                3  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
-    "data_path = 'data/Day_028/'\n",
+    "data_path = 'data/'\n",
     "df = pd.read_csv(data_path + 'taxi_data1.csv')\n",
     "\n",
     "train_Y = df['fare_amount']\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4            3             25             56  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.026876871475638442\n",
-      "Gradient Boosting Reg Score : 0.7104206713269223\n"
+      "Linear Reg Score : 0.026876871475640173\n",
+      "Gradient Boosting Reg Score : 0.710419432293152\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4        40.729717         -73.982490         40.761887  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,15 +456,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.027349059353071213\n",
-      "Gradient Boosting Reg Score : 0.8057254695051805\n"
+      "Linear Reg Score : 0.027473522287347694\n",
+      "Gradient Boosting Reg Score : 0.8056104802131114\n"
      ]
     }
    ],
@@ -483,32 +483,33 @@
    "source": [
     "# 作業1\n",
     "* 參考今日教材，試著使用經緯度一圈的長度比這一概念，組合出一個新特徵，再觀察原特徵加上新特徵是否提升了正確率?\n",
-    "> there is no significant difference\n"
+    "> 結果準確率反而下降了，其原因並非是經緯度比例不正確，而是因為這些計程車地點在紐約  \n",
+    "紐約河流與主要道路均為南北向，所以使得東西向的跨越往往路程比較崎嶇，計程車費反而較高\n",
+    "(同學可以試著將經度差改成緯度差的1.3倍計算, 反而會提升預測率)\n",
+    "這告訴我們 : 不能只單靠領域知識, 仍要以實際資料輔助驗證才行"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.025411719781064424\n",
-      "Gradient Boosting Reg Score : 0.804789905855529\n"
+      "Linear Reg Score : 0.025460050316213324\n",
+      "Gradient Boosting Reg Score : 0.8010976473009126\n"
      ]
     }
    ],
    "source": [
     "import math\n",
-    "\"\"\"\n",
-    "Your Code Here, set new character at df['distance_real']\n",
-    "\"\"\"\n",
-    "# the cod below is copied from https://github.com/gushengzhao1996/ML_100-Days/blob/main/Day_028_HW.ipynb\n",
-    "df['longitude_diff'] = df['longitude_diff']*math.cos((40.75/180)*math.pi) #根據角度修正經度\n",
-    "df['distance_real'] = (df['longitude_diff']**2 + df['latitude_diff']**2)**0.5\n",
-    "# 觀察結果 \n",
+    "latitude_average = df['pickup_latitude'].mean()\n",
+    "latitude_factor = math.cos(latitude_average/180*math.pi)\n",
+    "df['distance_real'] = ((df['longitude_diff']*latitude_factor)**2 + df['latitude_diff']**2)**0.5\n",
+    "\n",
+    "# 觀察結果 : 準確度下降\n",
     "train_X = scaler.fit_transform(df)\n",
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
@@ -520,20 +521,21 @@
    "source": [
     "# 作業2\n",
     "* 試著只使用新特徵估計目標值(忽略原特徵)，效果跟作業1的結果比較起來效果如何?\n",
-    "> Both scores slump vividly"
+    "> 效果自然是下降了, 不過即使只有一個特徵, 仍然比未做任何特徵合成前(沒做經緯度差的特徵)還要好  \n",
+    "可見特徵組合的重要性"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.001446755998683602\n",
-      "Gradient Boosting Reg Score : 0.7221194640622727\n"
+      "Linear Reg Score : 0.0014462469864103156\n",
+      "Gradient Boosting Reg Score : 0.7236450666734193\n"
      ]
     }
    ],
