--- a/Day_042_HW.ipynb
+++ b/Day_042_HW.ipynb
@@ -105,19 +105,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3950873620.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_6621/3950873620.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    2. 改用其他資料集 (boston, wine)，並與回歸模型的結果進行比較\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "## 作業\n",
     "\n",
@@ -125,8 +114,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wine.data.shape: (178, 13)\n",
+      "wine.data.dtype: float64\n",
+      "wine.keys: dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names'])\n"
+     ]
+    }
+   ],
    "source": [
     "wine = datasets.load_wine()\n",
     "print(f'wine.data.shape: {wine.data.shape}')\n",
