--- a/Day_071_使用損失函數_HW.ipynb
+++ b/Day_071_使用損失函數_HW.ipynb
@@ -613,6 +613,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## loss='mean_squared_error'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
