--- a/Day_086_CB_ModelCheckPoint_作業_HW.ipynb
+++ b/Day_086_CB_ModelCheckPoint_作業_HW.ipynb
@@ -575,9 +575,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of final weights: 0.4963\n",
+      "Accuracy of best(loadback) weights: 0.4963\n"
+     ]
+    }
+   ],
    "source": [
     "final_model_acc = accuracy_score(y_true=y_test.argmax(axis=-1), y_pred=pred_final.argmax(axis=-1))\n",
     "loadback_acc = accuracy_score(y_true=y_test.argmax(axis=-1), y_pred=pred_loadback.argmax(axis=-1))\n",
@@ -585,6 +594,13 @@
     "print(f'Accuracy of final weights: {final_model_acc}')\n",
     "print(f'Accuracy of best(loadback) weights: {loadback_acc}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
