--- a/Day_092_CNN_theory_HW.ipynb
+++ b/Day_092_CNN_theory_HW.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "**2. 卷積神經網路中，濾波器的大小 (3x3 or 5x5) 與內部數字的值 (value) 是怎麼決定的呢？**\n",
-    "> 特徵從何而來？以及在全連結層中，我們該如何決定權重？如果我們得親手完成這些工作，CNNs 應該不會像現在一樣熱門。幸好，有個名叫反向傳播（backpropagation）的機器學習技巧可以幫助我們解決這個問題。"
+    "> 濾波器的大小設定是超參數 (hyper-parameter)，必須要先由我們給定，目前主流模型皆是用 3x3 或 5x5；濾波器中的值則是屬於參數 (weights)，是透過訓練資料學習而來 (複製官方解答）"
    ]
   },
   {
