--- a/Day_093_CNN_Brief_HW.ipynb
+++ b/Day_093_CNN_Brief_HW.ipynb
@@ -77,27 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential_12\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_13 (Dense)             (None, 28, 28, 100)       200       \n",
+      "dense_19 (Dense)             (None, 100)               78500     \n",
       "_________________________________________________________________\n",
-      "activation_12 (Activation)   (None, 28, 28, 100)       0         \n",
+      "activation_18 (Activation)   (None, 100)               0         \n",
       "_________________________________________________________________\n",
-      "dense_14 (Dense)             (None, 28, 28, 100)       10100     \n",
+      "dense_20 (Dense)             (None, 10)                1010      \n",
       "_________________________________________________________________\n",
-      "activation_13 (Activation)   (None, 28, 28, 100)       0         \n",
+      "activation_19 (Activation)   (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 10,300\n",
-      "Trainable params: 10,300\n",
+      "Total params: 79,510\n",
+      "Trainable params: 79,510\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -107,10 +107,10 @@
    "source": [
     "# build our CNN model, 多加幾層\n",
     "model = Sequential()\n",
-    "model.add(Input((28, 28, 1)))\n",
-    "model.add(Dense(100))\n",
+    "#model.add(Input((28, 28, 1)))\n",
+    "model.add(Dense(100, input_shape=(784,)))\n",
     "model.add(Activation('relu'))\n",
-    "model.add(Dense(100))\n",
+    "model.add(Dense(10))\n",
     "model.add(Activation('softmax'))\n",
     "\n",
     "print(model.summary())"
