--- a/Day_094_CNN_Convolution_HW.ipynb
+++ b/Day_094_CNN_Convolution_HW.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "'\\n\\nnp.random.seed(1)\\n#定義一個 axaxd 的 feature map\\na_slice_prev = \\nW = \\nb = np.random.randn(1, 1, 1)\\n\\n#取得計算後,卷積矩陣的值\\nZ = conv_single_step(a_slice_prev, W, b)\\nprint(\"Z =\", Z)\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,20 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = -5.897160569766038\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "np.random.seed(1)\n",
-    "#定義一個 axaxd 的 feature map\n",
-    "a_slice_prev = \n",
-    "W = \n",
+    "#定義一個 4x4x3 的 feature map\n",
+    "a_slice_prev = np.random.randn(8, 8, 3)\n",
+    "W = np.random.randn(8, 8, 3)\n",
     "b = np.random.randn(1, 1, 1)\n",
     "\n",
     "#取得計算後,卷積矩陣的值\n",
     "Z = conv_single_step(a_slice_prev, W, b)\n",
     "print(\"Z =\", Z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
