--- a/Day_097_Keras_CNN_vs_DNN_HW.ipynb
+++ b/Day_097_Keras_CNN_vs_DNN_HW.ipynb
@@ -2771,8 +2771,43 @@
     "1. 請試著調整各個超參數，並說明那些超參數對於結果有明顯的影響?\n",
     "    > 上述實驗 Optimizer 與 epoch 有明顯的影響\n",
     "2. CNN 與 DNN 哪個模型的參數數量比較多? 造成參數的數量不同的原因在哪?\n",
-    "    > DNＮ比較多，因為池化層會減少"
+    "    > DNＮ比較多，因為池化層會減少CNN參數量"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
