Day 098 HW modified

--- a/Day_098_Python_generator_HW_ANS.ipynb
+++ b/Day_098_Python_generator_HW_ANS.ipynb
@@ -261,14 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.datasets import cifar10\n",
-    "import keras\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Activation, Flatten\n",
-    "from keras.layers import Conv2D, MaxPooling2D\n",
-    "import os\n",
-    "import itertools\n",
-    "import tensorflow"
+    "from keras.datasets import cifar10"
    ]
   },
   {
@@ -277,30 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "batch_size = 128 # batch 的大小，如果出現 OOM error，請降低這個值\n",
-    "num_classes = 10 # 類別的數量，Cifar 10 共有 10 個類別\n",
-    "epochs = 10 # 訓練的 epochs 數量"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
-    "print('x_train shape:', x_train.shape)\n",
-    "print(x_train.shape[0], 'train samples')\n",
-    "print(x_test.shape[0], 'test samples')\n",
-    "x_train = x_train.astype('float32')\n",
-    "x_test = x_test.astype('float32')\n",
-    "x_train /= 255\n",
-    "x_test /= 255\n",
-    "\n",
-    "# Convert class vectors to binary class matrices.\n",
-    "y_train = keras.utils.np_utils.to_categorical(y_train, num_classes)\n",
-    "y_test = keras.utils.np_utils.to_categorical(y_test, num_classes)"
+    "(x_train, x_test), (y_train, y_test) = cifar10.load_data()"
    ]
   },
   {
@@ -312,8 +282,7 @@
     "def cifar_generator(image_array, batch_size=32):\n",
     "    while True:\n",
     "        for indexs in range(0, len(image_array), batch_size):\n",
-    "            images = x_train[indexs: indexs+batch_size]\n",
-    "            labels = x_test[indexs: indexs+batch_size]\n",
+    "            images = image_array[indexs: indexs+batch_size]\n",
     "            yield images, labels"
    ]
   },
@@ -332,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images, labels = next(cifar_gen)"
+    "images = next(cifar_gen)"
    ]
   },
   {
@@ -356,9 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_combine(images)"
@@ -386,41 +353,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## copy from \n",
-    ">https://github.com/KamilHung/4th-ML100Days/blob/master/homework/Day098_Python_generator.ipynb"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-02 22:06:43.998121: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2021-12-02 22:06:43.998166: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keras.datasets import cifar10\n",
+    "import tensorflow\n",
     "import keras\n",
+    "from keras.datasets import cifar10\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, Activation, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
-    "import os\n",
-    "import itertools\n",
-    "import tensorflow"
+    "\n",
+    "#from keras.optimizers import RMSprop, Adam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -461,109 +412,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "896\n",
-      "9248\n",
-      "18496\n",
-      "36928\n",
-      "flatter: 1600\n",
-      "dense_1: 819712\n",
-      "dense_4: 5130\n",
-      "Model: \"sequential_20\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_54 (Conv2D)           (None, 32, 32, 32)        896       \n",
+      "conv2d (Conv2D)              (None, 32, 32, 32)        896       \n",
       "_________________________________________________________________\n",
-      "activation_61 (Activation)   (None, 32, 32, 32)        0         \n",
+      "activation (Activation)      (None, 32, 32, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_55 (Conv2D)           (None, 30, 30, 32)        9248      \n",
+      "conv2d_1 (Conv2D)            (None, 30, 30, 32)        9248      \n",
       "_________________________________________________________________\n",
-      "activation_62 (Activation)   (None, 30, 30, 32)        0         \n",
+      "activation_1 (Activation)    (None, 30, 30, 32)        0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_19 (MaxPooling (None, 15, 15, 32)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 15, 15, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_56 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+      "dropout (Dropout)            (None, 15, 15, 32)        0         \n",
       "_________________________________________________________________\n",
-      "activation_63 (Activation)   (None, 13, 13, 64)        0         \n",
+      "conv2d_2 (Conv2D)            (None, 15, 15, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "conv2d_57 (Conv2D)           (None, 11, 11, 64)        36928     \n",
+      "activation_2 (Activation)    (None, 15, 15, 64)        0         \n",
       "_________________________________________________________________\n",
-      "activation_64 (Activation)   (None, 11, 11, 64)        0         \n",
+      "conv2d_3 (Conv2D)            (None, 13, 13, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_20 (MaxPooling (None, 5, 5, 64)          0         \n",
+      "activation_3 (Activation)    (None, 13, 13, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_10 (Dropout)         (None, 5, 5, 64)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 6, 6, 64)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_6 (Flatten)          (None, 1600)              0         \n",
+      "dropout_1 (Dropout)          (None, 6, 6, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              (None, 512)               819712    \n",
+      "flatten (Flatten)            (None, 2304)              0         \n",
       "_________________________________________________________________\n",
-      "activation_65 (Activation)   (None, 512)               0         \n",
+      "dense (Dense)                (None, 512)               1180160   \n",
       "_________________________________________________________________\n",
-      "dropout_11 (Dropout)         (None, 512)               0         \n",
+      "activation_4 (Activation)    (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 10)                5130      \n",
+      "dropout_2 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "activation_66 (Activation)   (None, 10)                0         \n",
+      "dense_1 (Dense)              (None, 10)                5130      \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 890,410\n",
-      "Trainable params: 890,410\n",
+      "Total params: 1,250,858\n",
+      "Trainable params: 1,250,858\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-02 14:59:58.429738: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2021-12-02 14:59:58.429791: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2021-12-02 14:59:58.429831: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (11402.pyspark3): /proc/driver/nvidia/version does not exist\n",
+      "2021-12-02 14:59:58.430108: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
    "source": [
     "model = Sequential()\n",
-    "\n",
-    "# chanel*(kernel)*filters+bias: chanel=3, kernel=(3,3), filters=32, bias=32\n",
-    "print(3*(3*3)*32+32) \n",
-    "model.add(Conv2D(32, (3,3), padding='same', \n",
+    "model.add(Conv2D(32, (3, 3), padding='same',\n",
     "                 input_shape=x_train.shape[1:]))\n",
     "model.add(Activation('relu'))\n",
-    "\n",
-    "# previous outputs * (kernel) * filters + bias: previous outputs=32, kernel=(3,3), filters=32, bias=32\n",
-    "print(32*(3*3)*32+32) \n",
-    "model.add(Conv2D(32, (3,3)))\n",
+    "model.add(Conv2D(32, (3, 3)))\n",
     "model.add(Activation('relu'))\n",
-    "\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
-    "\n",
-    "# previous outputs * (kernel) * filters + bias: previous outputs=32, kernel=(3,3), filters=64, bias=64\n",
-    "print(32*(3*3)*64+64)\n",
-    "model.add(Conv2D(64, (3,3)))\n",
-    "model.add(Activation('relu'))\n",
-    "\n",
-    "# previous outputs * (kernel) * filters + bias: previous outputs=64, kernel=(3,3), filters=64, bias=64\n",
-    "print(64*(3*3)*64+64)\n",
-    "model.add(Conv2D(64, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "print(f'flatter: {5*5*64}')\n",
-    "model.add(Flatten())\n",
+    "model.add(Conv2D(64, (3, 3), padding='same'))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv2D(64, (3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
     "\n",
-    "print(f'dense_1: {1600*512+512}')\n",
+    "model.add(Flatten())\n",
     "model.add(Dense(512))\n",
     "model.add(Activation('relu'))\n",
-    "\n",
     "model.add(Dropout(0.5))\n",
-    "\n",
-    "# previous outputs * dense neurons + bias\n",
-    "print(f'dense_4: {512*10+10}')\n",
     "model.add(Dense(num_classes))\n",
     "model.add(Activation('softmax'))\n",
-    "\n",
-    "model.summary()     \n",
+    "model.summary()\n",
     "\n",
     "model.compile(loss='categorical_crossentropy',\n",
     "              optimizer=tensorflow.keras.optimizers.RMSprop(),\n",
@@ -572,108 +509,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
-    "\n",
     "def my_generator(x, y, batch_size):\n",
     "    while True:\n",
-    "        for idx in range(0, len(x), batch_size):\n",
+    "        for idx in range(0, len(x), batch_size): # 讓 idx 從 0 開始，一次增加 batch size。假設 batch_size=32, idx = 0, 32, 64, 96, ....\n",
     "            batch_x, batch_y = x[idx:idx+batch_size], y[idx:idx+batch_size]\n",
     "            yield batch_x, batch_y\n",
-    "        x, y = shuffle(x, y)"
+    "        x, y = shuffle(x, y) # loop 結束後，將資料順序打亂再重新循環"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_train_generator = my_generator(x_train, y_train, batch_size)\n"
+    "train_generator = my_generator(x_train, y_train, batch_size) # 建立好我們寫好的 generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-02 23:34:46.677264: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "390/390 [==============================] - 65s 164ms/step - loss: 1.7550 - accuracy: 0.3655 - val_loss: 1.4135 - val_accuracy: 0.4812\n",
-      "Epoch 2/10\n",
-      "390/390 [==============================] - 70s 179ms/step - loss: 1.3306 - accuracy: 0.5270 - val_loss: 1.2179 - val_accuracy: 0.5702\n",
-      "Epoch 3/10\n",
-      "390/390 [==============================] - 65s 166ms/step - loss: 1.1247 - accuracy: 0.6051 - val_loss: 0.9870 - val_accuracy: 0.6542\n",
-      "Epoch 4/10\n",
-      "390/390 [==============================] - 71s 181ms/step - loss: 0.9787 - accuracy: 0.6566 - val_loss: 1.0908 - val_accuracy: 0.6163\n",
-      "Epoch 5/10\n",
-      "390/390 [==============================] - 86s 221ms/step - loss: 0.8806 - accuracy: 0.6940 - val_loss: 0.7922 - val_accuracy: 0.7220\n",
-      "Epoch 6/10\n",
-      "390/390 [==============================] - 69s 176ms/step - loss: 0.8073 - accuracy: 0.7209 - val_loss: 0.7750 - val_accuracy: 0.7325\n",
-      "Epoch 7/10\n",
-      "390/390 [==============================] - 67s 172ms/step - loss: 0.7521 - accuracy: 0.7413 - val_loss: 0.7601 - val_accuracy: 0.7400\n",
-      "Epoch 8/10\n",
-      "390/390 [==============================] - 67s 173ms/step - loss: 0.7082 - accuracy: 0.7553 - val_loss: 0.6992 - val_accuracy: 0.7605\n",
-      "Epoch 9/10\n",
-      "390/390 [==============================] - 68s 175ms/step - loss: 0.6655 - accuracy: 0.7691 - val_loss: 0.7039 - val_accuracy: 0.7559\n",
-      "Epoch 10/10\n",
-      "390/390 [==============================] - 68s 175ms/step - loss: 0.6330 - accuracy: 0.7824 - val_loss: 0.7609 - val_accuracy: 0.7430\n",
-      "313/313 [==============================] - 3s 9ms/step - loss: 0.7609 - accuracy: 0.7430\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_41589/2163625357.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m                    )\n\u001b[1;32m      7\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Test loss:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Test accuracy:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'score' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "history = model.fit_generator(my_train_generator,\n",
-    "                    steps_per_epoch=int(len(x_train)/batch_size),\n",
-    "                    epochs = epochs,\n",
-    "                    verbose = 1,\n",
-    "                    validation_data = (x_test, y_test)\n",
-    "                   )\n",
-    "\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "313/313 [==============================] - 3s 9ms/step - loss: 0.7609 - accuracy: 0.7430\n",
-      "Test loss: 0.7608575820922852\n",
-      "Test accuracy: 0.7429999709129333\n"
-     ]
-    }
-   ],
-   "source": [
-    "score = model.evaluate(x_test, y_test, verbose=1)\n",
+    "history = model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch=int(len(x_train)/batch_size), # 一個 epochs 要執行幾次 update，通常是資料量除以 batch size\n",
+    "                    epochs=epochs,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(x_test, y_test))\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
    ]
