--- a/Day_100_transfer_learning_SAMPLE.ipynb
+++ b/Day_100_transfer_learning_SAMPLE.ipynb
@@ -319,7 +319,21 @@
       "Epoch 6/30\n",
       "782/782 [==============================] - 82488s 106s/step - loss: 0.8146 - accuracy: 0.8187 - val_loss: 1.3173 - val_accuracy: 0.6869\n",
       "Epoch 7/30\n",
-      "605/782 [======================>.......] - ETA: 2:27 - loss: 0.7496 - accuracy: 0.8424"
+      "782/782 [==============================] - 654s 836ms/step - loss: 0.7582 - accuracy: 0.8391 - val_loss: 1.6519 - val_accuracy: 0.6478\n",
+      "Epoch 8/30\n",
+      "782/782 [==============================] - 647s 828ms/step - loss: 0.7074 - accuracy: 0.8577 - val_loss: 1.1476 - val_accuracy: 0.7180\n",
+      "Epoch 9/30\n",
+      "782/782 [==============================] - 670s 856ms/step - loss: 0.6734 - accuracy: 0.8691 - val_loss: 1.3652 - val_accuracy: 0.6948\n",
+      "Epoch 10/30\n",
+      "782/782 [==============================] - 666s 852ms/step - loss: 0.6349 - accuracy: 0.8824 - val_loss: 1.4749 - val_accuracy: 0.6634\n",
+      "Epoch 11/30\n",
+      "782/782 [==============================] - 596s 762ms/step - loss: 0.6080 - accuracy: 0.8917 - val_loss: 1.4663 - val_accuracy: 0.7075\n",
+      "Epoch 12/30\n",
+      "782/782 [==============================] - 555s 710ms/step - loss: 0.5898 - accuracy: 0.9007 - val_loss: 1.1794 - val_accuracy: 0.7483\n",
+      "Epoch 13/30\n",
+      "782/782 [==============================] - 566s 724ms/step - loss: 0.5698 - accuracy: 0.9066 - val_loss: 1.7033 - val_accuracy: 0.6585\n",
+      "Epoch 14/30\n",
+      "167/782 [=====>........................] - ETA: 7:56 - loss: 0.4957 - accuracy: 0.9353"
      ]
     }
    ],
