--- a/Day_003_ML_FLOWS_STEPS_HW.ipynb
+++ b/Day_003_ML_FLOWS_STEPS_HW.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "Reference: [利用进化深度卷积神经网络识别全基因组RNA结合蛋白](https://www.jiqizhixin.com/articles/2021-12-08-2)\n",
     "1. 專案的目標？ (要解決什麼問題）\n",
     "    > RNA结合蛋白（RBPs）是一组与RNA调节和代谢相关的蛋白质，在介导RNA的成熟、转运、定位和翻译中起重要作用。然而，一个 RBP 可能有多个目标 RNA，其表达缺陷会导致多种疾病，从而威胁人们的健康。\n",
     "当前，已经开发出全基因组 RNA 结合事件检测方法来预测 RBP。然而，现有的计算方法通常存在一些局限性，例如高维、数据稀疏和模型性能低。\n",
