--- a/Day_002_ML_INTRODUCTION_HW.ipynb
+++ b/Day_002_ML_INTRODUCTION_HW.ipynb
@@ -28,13 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "References: \n",
-    "1. [什麼是Martech？2020 Martech潮流下的EDM趨勢](https://awoo.ai/zh-hant/blog/2020-martech-edm-tigerfly/) <br/>\n",
-    "2. [《商業思維》：流量紅利消失的年代，企業如何轉往經營「流量池」？ ](https://www.thenewslens.com/article/112865)<br/>\n",
-    "3. [行銷科技崛起！你還不知道 Martech 是什麼嗎? 完整解釋與趨勢大公開！](http://shorturl.at/jxTU5)\n",
-    "4. [提升顧客忠誠度和留存率永遠不嫌晚，聰明運用AI加速進程！](https://www.appier.com/zh-hant/blog/how-to-increase-customer-loyalty-and-retention-before-its-too-late/)\n",
     "\n",
-    "隨著流量紅利的消失，為了企業的銷售數字，重心轉變放在既有流量、既有客戶的經營上，機器學習可以在\n",
+    "隨著流量紅利的消失，為了企業的銷售數字，重心轉變放在既有流量、既有客戶的經營上，機器學習可以在MarTech發光發熱。\n",
     "\n",
     "The News Lens 游舒帆提到：在互聯網流量增速大於數位廣告增速時，透過廣告來獲取新客戶是相對容易的，但隨著流量紅利的消失，要獲取新流量、新客戶（增量）已經不再容易，要穩固企業的銷售數字與經營，就要把重心放到既有流量、既有客戶（存量）的經營上。因此，如何提高消費者的「回購頻次」和「單次毛利」，從現有的會員基礎中挖掘出更多的新變現模式，企業回購率是一個衡量事業是否健康的重要指標，回購率代表你的客戶會回頭再買你的商品或服務，Martech 成為這一趨勢的解方。\n",
     "\n",
@@ -58,6 +53,12 @@
     ">舉例來說，一位超過一個月都未打開行銷電子郵件的使用者，被人工智慧預測他可能同時即將在其他品牌進行消費，這時企業就可以主動提供優惠券來吸引顧客留下。優惠券的內容可以根據顧客的興趣來加以設計，如此一來，企業便能增加留住顧客的可能性，同時降低顧客流失率。\n",
     "\n",
     ">運用人工智慧來留住顧客的方法可創造更加個人化的顧客體驗，使其在整個顧客旅程中感受到更多與品牌業者互動的機會，從而降低離開的可能性。透過界定正確的目標受眾與滿足其特定興趣，企業便可以在老顧客保衛戰上取得主動優勢，並在顧客尚未意識到自己正考慮離開前，重新與其建立良好關係。\n",
+    "\n",
+    "References: \n",
+    "1. [什麼是Martech？2020 Martech潮流下的EDM趨勢](https://awoo.ai/zh-hant/blog/2020-martech-edm-tigerfly/) <br/>\n",
+    "2. [《商業思維》：流量紅利消失的年代，企業如何轉往經營「流量池」？ ](https://www.thenewslens.com/article/112865)<br/>\n",
+    "3. [行銷科技崛起！你還不知道 Martech 是什麼嗎? 完整解釋與趨勢大公開！](http://shorturl.at/jxTU5)\n",
+    "4. [提升顧客忠誠度和留存率永遠不嫌晚，聰明運用AI加速進程！](https://www.appier.com/zh-hant/blog/how-to-increase-customer-loyalty-and-retention-before-its-too-late/)\n",
     "\n"
    ]
   },
